Updating my Project

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>ELVISMugisha | Portfolio Index</title>
+  <title>MUGISHA ELVIS</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -167,8 +167,8 @@
                     <p class="lead">
                       Motivated and results-driven Software Engineer with 1+ year's of experience.
                       I have continuously demonstrated experience in improving software performance by
-                      implementing new ideas, updating, testing, and coding. Experience in developing tools which increase accuracy, efficacy and performance of software. <br> 
-                     
+                      implementing new ideas, updating, testing, and coding. Experience in developing tools which increase accuracy, efficacy and performance of software. <br>
+
                     </p>
                     <p class="lead">
                       I am a fast leaner and often try to extend and improve my skills, I have a good ability to build constructive and social relations
@@ -386,6 +386,7 @@
                     <div class="line">
                       <h3 class="text-muted">Personal Project</h3>
                       <p class="text-muted">VisionArchitect Website</p>
+                      <p class="text-muted">InterDelivery Dashboard</p>
                       <p class="text-muted">
                         <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-calendar3" viewBox="0 0 16 16">
                           <path d="M14 0H2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zM1 3.857C1 3.384 1.448 3 2 3h12c.552 0 1 .384 1 .857v10.286c0 .473-.448.857-1 .857H2c-.552 0-1-.384-1-.857V3.857z"/>
@@ -430,7 +431,7 @@
               <div class="service-content">
                 <h2 class="s-title" style="color: #fff; font-weight: bold;">Software Developer</h2>
                 <p class="s-description text-center">
-                  Experienced in database management systems and software development, with a strong focus on full-stack World Wide Web applications. 
+                  Experienced in database management systems and software development, with a strong focus on full-stack World Wide Web applications.
                   And specializes in Django and Python with expertise deploying to both server and serverless environments. Also works in a team with tech lead role
                 </p>
               </div>
@@ -463,8 +464,8 @@
               <div class="service-content">
                 <h2 class="s-title" style="color: #fff; font-weight: bold;">Python Developer</h2>
                 <p class="s-description text-center">
-                  Python is a general-purpose language that has become very popular, in part due to the wide range of use cases, from web development 
-                  to data science and machine learning. Good Python developers are therefore highly sought after. Strong foundational knowledge of 
+                  Python is a general-purpose language that has become very popular, in part due to the wide range of use cases, from web development
+                  to data science and machine learning. Good Python developers are therefore highly sought after. Strong foundational knowledge of
                   programming in Python is essential for junior programmers.
                 </p>
               </div>
@@ -482,7 +483,7 @@
               <div class="service-content">
                 <h2 class="s-title" style="color: #fff; font-weight: bold;">Backend Developer</h2>
                 <p class="s-description text-center">
-                  Strives for pixel-perfect front-end responsive websites. 
+                  Strives for pixel-perfect front-end responsive websites.
                   My Bootstrap and python Django skills give me the ability to also develop for the back-end. Thanks to my proactive attitude, effective communication,
                   and flexibility, i can adapt to any team conditions in a short amount of time
                 </p>
@@ -501,8 +502,8 @@
               <div class="service-content">
                 <h2 class="s-title" style="color: #fff; font-weight: bold;">Frontend Developer</h2>
                 <p class="s-description text-muted text-center">
-                  Coding HTML, CSS, Bootstrap and JS, experience in adapting web technology to meet customer 
-                  needs is extensive. Enjoys bringing value to clients via eCommerce solutions, legacy integrations, and optimized Python Django and 
+                  Coding HTML, CSS, Bootstrap and JS, experience in adapting web technology to meet customer
+                  needs is extensive. Enjoys bringing value to clients via eCommerce solutions, legacy integrations, and optimized Python Django and
                   Bootstrap-driven applications
                 </p>
               </div>
@@ -520,7 +521,7 @@
               <div class="service-content">
                 <h2 class="s-title" style="color: #fff; font-weight: bold;">Full Stack Developer</h2>
                 <p class="s-description text-center">
-                  passionate full-stack developer with a track record of taking large-scale web applications from the drawing board to 
+                  passionate full-stack developer with a track record of taking large-scale web applications from the drawing board to
                   production. Proficient with modern web technologies, highly adaptable to any business requirements, and experienced with remote work
                 </p>
               </div>
@@ -531,44 +532,44 @@
     </section>
 
     <!-- ======= Counter Section ======= -->
-    <!-- <div class="section-counter" style="background-color: black">
+    <div class="section-counter" style="background-color: black">
       <div class="overlay-mf"></div>
       <div class="container position-relative">
         <div class="row">
-          <div class="col-sm-3 col-lg-3">
+          <div class="col-sm-4 col-lg-4">
             <div class="counter-box counter-box pt-4 pt-md-0">
               <div class="counter-ico">
                 <span class="ico-circle"><i class="bi bi-check"></i></span>
               </div>
               <div class="counter-num">
                 <p data-purecounter-start="0" data-purecounter-end="6" data-purecounter-duration="1" class="counter purecounter"></p>
-                <span class="counter-text">WORKS COMPLETED</span>
+                <span class="counter-text">COMPLETED PROJECTS</span>
               </div>
             </div>
           </div>
-          <div class="col-sm-3 col-lg-3">
+          <div class="col-sm-4 col-lg-4">
             <div class="counter-box pt-4 pt-md-0">
               <div class="counter-ico">
                 <span class="ico-circle"><i class="bi bi-journal-richtext"></i></span>
               </div>
               <div class="counter-num">
-                <p data-purecounter-start="0" data-purecounter-end="1" data-purecounter-duration="1" class="counter purecounter"></p>
+                <p data-purecounter-start="0" data-purecounter-end="2" data-purecounter-duration="1" class="counter purecounter"></p>
                 <span class="counter-text">YEAR OF EXPERIENCE</span>
               </div>
             </div>
           </div>
-          <div class="col-sm-3 col-lg-3">
+          <div class="col-sm-4 col-lg-4">
             <div class="counter-box pt-4 pt-md-0">
               <div class="counter-ico">
                 <span class="ico-circle"><i class="bi bi-people"></i></span>
               </div>
               <div class="counter-num">
-                <p data-purecounter-start="0" data-purecounter-end="8" data-purecounter-duration="1" class="counter purecounter"></p>
+                <p data-purecounter-start="0" data-purecounter-end="6" data-purecounter-duration="1" class="counter purecounter"></p>
                 <span class="counter-text">TOTAL CLIENTS</span>
               </div>
             </div>
           </div>
-          <div class="col-sm-3 col-lg-3">
+          <!-- <div class="col-sm-3 col-lg-3">
             <div class="counter-box pt-4 pt-md-0">
               <div class="counter-ico">
                 <span class="ico-circle"><i class="bi bi-award"></i></span>
@@ -578,10 +579,10 @@
                 <span class="counter-text">AWARD WON</span>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
-    </div> -->
+    </div>
 
     <!-- ======= Portfolio Section ======= -->
     <section id="work" class="portfolio-mf sect-pt4 route" style="background-color: black;">
@@ -597,7 +598,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-12">
+          <div class="col-md-6">
             <div class="work-box">
               <a href="assets/img/visionarchitect.png" width=300 height=10 data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
@@ -614,7 +615,32 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="portfolio-details.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="https://visionarchitect.herokuapp.com/" target="_blank"> <span class="bi bi-arrow-right-square-fill"></span></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-6">
+            <div class="work-box">
+              <a href="assets/img/interDelivery.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                <div class="work-img">
+                  <img src="assets/img/interDelivery.png" alt="Inter Delivery" class="img-fluid">
+                </div>
+              </a>
+              <div class="work-content bg-dark">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">International Delivery</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">Web Application Dashboard</span> / <span class="w-date">May 5th-10th. 2022</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="https://international-delivery.herokuapp.com/" target="_blank"> <span class="bi bi-arrow-right-square-fill"></span></a>
                     </div>
                   </div>
                 </div>
@@ -798,7 +824,7 @@
             </div>
 
             <!-- <div id="testimonial-mf" class="owl-carousel owl-theme">
-          
+
         </div> -->
           </div>
         </div>
@@ -982,7 +1008,7 @@
                     </div>
                     <div class="more-info">
                       <p class="lead text-muted">
-                        I am a fast leaner and often try to extend and improve my skills, I have a good ability to build constructive and social relations
+                        "I am a fast leaner and often try to extend and improve my skills, I have a good ability to build constructive and social relations."
                       </p>
                       <ul class="list-ico text-muted">
                         <li style="font-weight: bold;"><span class="bi bi-geo-alt" style="color: #009973"></span> KK 447 ST KIGALI, RWANDA</li>
@@ -1009,7 +1035,7 @@
 
   </main>
 
- 
+
   <footer style="background-color: black;">
     <div class="container">
       <div class="row">
@@ -1017,7 +1043,7 @@
           <div class="copyright-box">
             <p class="copyright text-muted" style="font-weight: bold; font-size: 20px;">&copy; Copyright <strong>ELVISMugisha</strong>. All Rights Reserved</p>
             <div class="credits text-muted" style="font-weight: bold; font-size: 20px;">
-              Designed by <a href="#hero">ELVIS.M</a>
+              Designed by <a href="#hero">ELVIS Mugisha</a>
             </div>
           </div>
         </div>
