--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <div class="home-text">
             <h2 class="text-muted mb-1" style="font-weight: bold; font-size: 30px;">Hello, I'm</h2>
             <h1 class="hero-subtitle text-muted" style="font-weight: bold; font-size: 40px;"><span style="font-weight: bold; font-size: 40px;"></span> ELVIS Mugisha</h1>
-            <h1 class="hero-subtitle text-muted"><span class="typed" data-typed-items="Software Developer,Web Developer, Frontend Developer, Backend Developer, Full Stack Developer, Freelancer"></span></h1>
+            <h1 class="hero-subtitle text-muted"><span class="typed" data-typed-items="Software Developer,Web Developer,Mobile App Developer, Frontend Developer, Backend Developer, Full Stack Developer, Freelancer"></span></h1>
             <!-- <p class="mt-4 text-muted">hcbhabcbdcn ndscnkds kncn dsnkcndsnc dn scnj dscnj dsncdnsncncnd</p> -->
             <p class="pt-3">
               <a class="btn btn-success js-scroll px-4" href="#about" role="button">Learn More</a>
@@ -257,7 +257,7 @@
                       <div class="progress">
                         <div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
                       </div>
-                      <span class="text-muted" style="font-weight: bold;">Linux & Mac</span>
+                      <span class="text-muted" style="font-weight: bold;">Flutter</span>
                       <div class="progress">
                         <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                       </div>
@@ -456,17 +456,20 @@
             <div class="service-box bg-dark">
               <div class="service-ico">
                 <span class="ico-circle">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-filetype-py" viewBox="0 0 16 16">
+                  <!-- <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-filetype-py" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M14 4.5V14a2 2 0 0 1-2 2H7v-1h5a1 1 0 0 0 1-1V4.5h-2A1.5 1.5 0 0 1 9.5 3V1H4a1 1 0 0 0-1 1v9H2V2a2 2 0 0 1 2-2h5.5L14 4.5ZM0 11.85h1.6c.289 0 .533.06.732.179.201.117.355.276.46.477.105.201.158.427.158.677 0 .25-.054.476-.16.677-.106.199-.26.357-.464.474a1.452 1.452 0 0 1-.732.173H.79v1.342H0V11.85Zm2.06 1.714a.795.795 0 0 0 .085-.381c0-.227-.062-.4-.185-.521-.123-.122-.294-.182-.513-.182H.788v1.406h.66a.794.794 0 0 0 .374-.082.574.574 0 0 0 .238-.24Zm2.963.75v1.535H4.23v-1.52L2.89 11.85h.876l.853 1.696h.032l.856-1.696h.855l-1.339 2.464Z"/>
+                  </svg> -->
+                  <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-app" viewBox="0 0 16 16">
+                    <path d="M11 2a3 3 0 0 1 3 3v6a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3V5a3 3 0 0 1 3-3h6zM5 1a4 4 0 0 0-4 4v6a4 4 0 0 0 4 4h6a4 4 0 0 0 4-4V5a4 4 0 0 0-4-4H5z"/>
                   </svg>
                 </span>
               </div>
               <div class="service-content">
-                <h2 class="s-title" style="color: #fff; font-weight: bold;">Python Developer</h2>
+                <h2 class="s-title" style="color: #fff; font-weight: bold;">Mobile App Developer</h2>
                 <p class="s-description text-center">
-                  Python is a general-purpose language that has become very popular, in part due to the wide range of use cases, from web development
-                  to data science and machine learning. Good Python developers are therefore highly sought after. Strong foundational knowledge of
-                  programming in Python is essential for junior programmers.
+                  Flutter is an open-source UI software development kit created by Google. It is used to develop cross platform
+                  applications for Android, iOS, Linux, macOS, Windows, Google Fuchsia, and the web from a single codebase.
+                  Usually i use Flutter for mobile application with the help of Django Rest Framework (API).
                 </p>
               </div>
             </div>
@@ -613,10 +616,10 @@
                       <span class="w-ctegory">Web Application</span> / <span class="w-date">March. 2022</span>
                     </div>
                   </div>
-                  
+
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="https://visionarchitect.herokuapp.com/" target="_blank"> <span class="bi bi-arrow-right-square-fill"></span></a>
+                      <a href="https://visionarchitects.herokuapp.com/" target="_blank"> <span class="bi bi-arrow-right-square-fill"></span></a>
                     </div>
                   </div>
                 </div>
@@ -1042,7 +1045,7 @@
       <div class="row">
         <div class="col-sm-12">
           <div class="copyright-box">
-            <p class="copyright text-muted" style="font-weight: bold; font-size: 20px;">&copy; Copyright <strong>ELVISMugisha</strong>. All Rights Reserved</p>
+            <!-- <p class="copyright text-muted" style="font-weight: bold; font-size: 20px;">&copy; Copyright <strong>ELVISMugisha</strong>. All Rights Reserved</p> -->
             <div class="credits text-muted" style="font-weight: bold; font-size: 20px;">
               Designed by <a href="#hero">ELVIS Mugisha</a>
             </div>
