--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               ELVIS Mugisha
             </h1>
             <h1 class="hero-subtitle text-muted">
-              <span class="typed" data-typed-items="Software Developer, Web Developer, Frontend Developer, Backend Developer, Full Stack Developer, Java Developer, Python Developer, Freelancer"></span>
+              <span class="typed" data-typed-items="Software Developer, Java Developer, Python Developer, Web Developer, Frontend Developer, Backend Developer, Full Stack Developer, Freelancer"></span>
             </h1>
             <!-- <p class="mt-4 text-muted">hcbhabcbdcn ndscnkds kncn dsnkcndsnc dn scnj dscnj dsncdnsncncnd</p> -->
             <p class="pt-3">
@@ -115,23 +115,28 @@
                     </div>
                     <div class="about-info">
                         <p>
-                          <span class="title-s text-muted" style="font-weight: bold;">Names: </span> 
+                          <span class="title-s text-muted" style="font-weight: bold;">Name : </span> 
                           <span style="font-weight: bold; color: #009973;">ELVIS Mugisha</span>
                         </p>
 
                         <p>
-                          <span class="title-s text-muted" style="font-weight: bold;">Profile: </span> 
+                          <span class="title-s text-muted" style="font-weight: bold;">Profile : </span> 
                           <span style="font-weight: bold; color: #009973;">Software Engineer</span>
                         </p>
 
                         <p>
-                          <span class="title-s text-muted" style="font-weight: bold;">Email: </span> 
+                          <span class="title-s text-muted" style="font-weight: bold;">Email : </span> 
                           <span style="font-weight: bold; color: #009973;">mugishaelvis104@gmail.com</span>
                         </p>
 
                         <p>
-                          <span class="title-s text-muted" style="font-weight: bold;">Phone: </span> 
+                          <span class="title-s text-muted" style="font-weight: bold;">Phone : </span> 
                           <span style="font-weight: bold; color: #009973;">+(250) 780-527-973</span>
+                        </p>
+
+                        <p>
+                          <span class="title-s text-muted" style="font-weight: bold;">Linkedin : </span> 
+                          <span style="font-weight: bold; color: #009973;">https://www.linkedin.com/in/elvis-mugisha-a846b1230/</span>
                         </p>
                     </div>
                   </div>
@@ -184,7 +189,7 @@
                     </div>
                   </div>
                 </div>
-                
+
                 <div class="col-md-6">
                   <div class="about-me pt-4 pt-md-0">
                     <div class="title-box-2">
@@ -201,11 +206,11 @@
                     </p>
 
                     <p class="lead">
-                      I am a fast leaner and often try to extend and improve my skills, I have a good ability to build constructive and social relations
+                      I am a fast leaner and often try to extend and improve my skills, I have a good ability to build constructive and social relations.
                     </p>
 
                     <p class="lead">
-                      Confident in working with various computer systems and software configuration processes. Comfortable in working in fast-paced environment and delivering exceptional results in a timely manner
+                      Confident in working with various computer systems and software configuration processes. Comfortable in working in fast-paced environment and delivering exceptional results in a timely manner.
                     </p>
 
                     <p class="lead lead1">
@@ -214,9 +219,13 @@
                       JavaScript, CSS, HTML and MySQL.
                     </p>
 
-                    <div class="row">
-                      <div class="col-md-12">
-                        <a href="assets/img/Elvis Cv.pdf" download="ElvisMugisha_cv.pdf" target="_blank">Download My CV <span></span> </a>
+                    <div class="row text-center" style="margin-top: -3em">
+                      <h3 class="title-left text-muted" style="margin-bottom: 1.5em;">Download my CV</h3>
+                      <div class="col-md-6 cv-link">
+                        <a href="assets/img/Elvis updated shorter version .pdf" download="ElvisMugisha_cv.pdf" target="_blank" style="font-size: 15px;">Shorter Version<span></span> </a>
+                      </div>
+                      <div class="col-md-6 cv-link">
+                        <a href="assets/img/Elvis updated longer version.pdf" download="ElvisMugisha_cv.pdf" target="_blank" style="font-size: 15px;">Longer Version <span></span> </a>
                       </div>
                     </div>
 
@@ -439,7 +448,7 @@
                           <path d="M14 0H2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zM1 3.857C1 3.384 1.448 3 2 3h12c.552 0 1 .384 1 .857v10.286c0 .473-.448.857-1 .857H2c-.552 0-1-.384-1-.857V3.857z"/>
                           <path d="M6.5 7a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm-9 3a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm-9 3a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
                         </svg>
-                        June 2022 - Present-day
+                        June 2022 - Present
                       </p>
                     </div>
                     <br>
@@ -513,7 +522,7 @@
                         to other businesses.
                       </p>
                       <p class="text-muted">I currently work there as a 
-                        <span class="text-muted" style="font-weight: bold;">Software Developer (Remotly).</span>
+                        <span class="text-muted" style="font-weight: bold;">Software Developer (Remotely).</span>
                         But i started as a student attending a program (
                         <span class="text-muted" style="font-weight: bold;">Innov8 Incubator Program</span>). 
                       </p>
